
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/projectName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="15dip"
    android:textSize="18sp"
    android:hint="PROJECT_NAME"
    android:layout_margin="10dp"
    />
