<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProjectListActivity"
    tools:showIn="@layout/activity_project_list">


    <ListView
        android:id="@+id/projectList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"/>


</android.support.constraint.ConstraintLayout>