...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:text="Create" />

        <EditText
            android:id="@+id/projectNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/updateButton"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:inputType="text"
            android:text="" />

    </RelativeLayout>
...
